# ctms-api

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  asgi.py  cloudbuild.yaml  clouddeploy  docker-compose.yaml  fake_file  mypy.ini  pyproject.toml  version.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: build-image.yaml  build.yaml  ci.yaml  dependabot-automerge.yaml  integration-test.yaml  lint.yaml  sphinx-pages.yaml  test-build.yaml
adrs/: madr-fxa-ctms.md
cloudbuild/: test.yaml
containerized_microservice_template/: app.py  models.py
ctms/: acoustic_service.py  acoustic_sync.py  app.py  auth.py  background_metrics.py  backport_legacy_waitlists.py  bigquery-import.py  config.py  crud.py  crud_stripe.py  csv_helpers.py  database.py  dependencies.py  exception_capture.py  ingest.py  ingest_stripe.py  log.py  logging.py  metrics.py  models.py  monitor.py  permissions.py  sample_data.py  schemas.py  sync.py
ctms/cli/: clients.py  main.py  permissions.py  roles.py
ctms/routers/: contacts.py  platform.py  stripe.py
ctms/schemas/: __init__.py  addons.py  api_client.py  base.py  bulk.py  common.py  contact.py  email.py  fxa.py  mofo.py  newsletter.py  pending_acoustic_record.py  product.py  relay.py  response.py  stripe_customer.py  stripe_invoice.py  stripe_invoice_item.py  stripe_invoice_line_item.py  stripe_payment_method.py  stripe_price.py  stripe_product.py  stripe_subscription.py  stripe_subscription_item.py  vpn.py  waitlist.py  web.py
ctms_spike/: app.py  models.py
docker/: Dockerfile  docker-entrypoint.sh  gunicorn_conf.py  lint.sh  log_config.json  test.sh
docker/config/: env.dist  local_dev.env
docs/: README.md  access_controls.md  cli.md  conf.py  configuration.md  containerized_microservice_template.rst  ctms.bin.rst  ctms.rst  ctms.schemas.rst  deployment_guide.md  developer_setup.md  index.rst  modules.rst  testing_strategy.md  tests.behave.rst  tests.behave.steps.rst  tests.rst
docs/adrs/: 001-madr-fxa-ctms.md  004-waitlists_acoustic.md  004-waitlists_subscribed.md  basket-inbox.md  waitlists_relationships.md  waitlists_subscribed.md
docs/diagrams/: bedrock_basket_ctms_acoustic.md
guides/: README.md  auto_documentation.md  configuration.md  deployment_guide.md  developer_setup.md  first_steps.md  git_strategy.md  testing_strategy.md
k8s/: deploy.yaml  ing.yaml  svc.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 20210224_9a91e36e6e6f_init.py  20210226_3f8a97b79852_add_email_double_opt_in.py  20210301_03689871cdfb_make_timestamps_work.py  20210301_20f05b0d3dc8_add_server_default_to_timestamps.py  20210309_435d9701a9a4_add_api_client_table.py  20210319_3c94af7ca946_add_unique_constraint_to_newsletters.py  20210326_c770b3d28ea1_add_mofo_table.py  20210330_2bc6c4d12e2e_drop_old_email_mofo_columns.py  20210330_8019ffa1614e_update_fields_from_sample_data_learnings.py  20210422_b158cb1c877c_create_table_for_held_records_that_are_.py  20210422_cdedf9f62604_updating_defaulting_of_values_for_db_.py  20210426_5bd2b2155c71_updating_relationship_between_pending_.py  20210426_c57f9a6084eb_updating_timestamps_to_datetime.py  20210427_832a2a588c88_adding_an_index_to_updatetimestamp_in_.py  20210428_6367a2394c6c_updating_indexes_adding_composite_index_.py  20210429_bd7adf1a3801_adding_indexes_for_main_ids.py  20210503_3da6a1229bb1_adding_new_table_for_acoustic_pending_.py  20210505_cad3c933830b_creating_table_for_pending_acoustic_.py  20210520_37edf9c48404_adding_lower_indexes.py  20210601_4ccfeab6e164_.py  20211021_53e90d3dbf98_add_stripe_tables.py  20211021_a236d9bd93fd_add_stripe_tables_part_1.py  20211021_f7316f16c53e_add_stripe_tables_part_2.py  20211029_1b62022b71b2_add_stripe_subscription_tables.py  20211029_a444065d1b11_add_stripe_customer_table.py  20211029_ba5072d08178_add_stripe_invoice_tables.py  20211116_1ef38317ff85_add_fxa_id_to_stripe_customer.py  20211116_47c59393f5d8_empty.py  20211116_47c59393f5d8_populate_stripe_customer_fxa_id.py  20211117_6023dd5af526_drop_stripe_customer_email_id.py  20211118_4eed7a83e324_remove_duplicate_stripe_customers.py  20211118_52382ae22fc8_delete_stripe_customer_fxa_id_is_null.py  20211118_ad4a8f10e344_populate_stripe_customer_fxa_id.py  20211118_d1a16865b051_drop_stripe_customer_email_id.py  20220118_5ec00d566777_add_relay_waitlist.py  20220118_6c7724982996_adding_relaywaitlist.py  20221109_406251207612_adding_index_for_stripe_invoice_line_.py  20221111_06f24cc01c09_add_acoustic_field.py  20221115_f8b8f6aa0e96_add_acoustic_newsletter_mapping.py  20221213_9c37ea9b5bba_add_waitlist_table.py  (+19 more)
scripts/: build.sh  kill.sh  lint.sh  run.sh  test.sh  update_baseline.sh
scripts/importers/: copy_to_db.sh  finish.sql  import-mofo.sql  setup.sql
suppression-list/: README.md  csv2optout.py  example.csv
tests/: conftest.py  docker-compose.lint.yaml  docker-compose.test.yaml  helpers.py
tests/behave/: app.feature  get_test_contact.feature  get_test_user.feature
tests/behave/steps/: app.py
tests/data/: __init__.py
tests/data/good_csvs/: CTMS_SAMPLE_contact_to_amo.csv  CTMS_SAMPLE_email_ids.csv  (+1 more)
tests/factories/: __init__.py  models.py  stripe.py
tests/integration/: basket-db-init.sql  basket.env  ctms-db-init.sql  test_basket_waitlist_subscription.py
tests/unit/: conftest.py  factories.py  sample_data.py  test_acoustic_service.py  test_acoustic_sync.py  test_api.py  test_api_delete.py  test_api_get.py  test_api_get_by_alt_id.py  test_api_patch.py  test_api_post.py  test_api_put.py  test_api_stripe.py  test_app.py  test_auth.py  test_backport_legacy_waitlists.py  test_bin_acoustic_resync.py  test_bin_acoustic_sync.py  test_bin_client_credentials.py  test_bin_healthcheck_sync.py  test_bin_load_sample_csv.py  test_bulk.py  test_crud.py  test_crud_stripe.py  test_ingest.py  test_ingest_stripe.py  test_log.py  test_logging.py  test_metrics.py  test_monitor.py  test_permissions.py  test_private_api.py  test_schema_contact.py  test_schema_waitlist.py  test_sync.py
(+27 files in other folders)
