[build-system]
requires = ["poetry>=1.7"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ctms"
version = "0"
description = "Contact Management System API"
authors = ["CTMS Reviewers <@mozilla-it/ctms-reviewers>"]


[tool.poetry.dependencies]
# These packages are mandatory and form the core of this package’s distribution.
python = "^3.12.1"
fastapi = "^0.115.6"
starlette = "^0.41.3"
requests = "^2.32.3"
pydantic = {extras = ["email"], version = "^2.10.3"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
SQLAlchemy = "^2.0.36"
alembic = "^1.14.0"
python-multipart = "^0.0.19"
python-dateutil = "^2.9.0"
dockerflow = {extras = ["fastapi"], version = "^2024.4.2"}
sentry-sdk = {extras = ["fastapi"], version = "^2.19.2"}
lxml = "^5.3.0"
prometheus-client = "0.21.1"
colorama = "^0.4.6"
psycopg2 = "^2.9.10"
google-auth = "^2.36.0"
pydantic-settings = "^2.6.1"
argon2-cffi = "^23.1.0"
pyjwt = "^2.10.1"



[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"
coverage = {extras = ["toml"], version = "^7.6"}
mypy = "^1.13"
types-python-dateutil = "^2.9.0"
detect-secrets = "^1.5.0"
bandit = "^1.8.0"
SQLAlchemy-Utils = "^0.41.2"
types-requests = "^2.32.0"
factory-boy = "^3.3.1"
pytest-factoryboy = "^2.7.0"
backoff = "^2.2.1"
httpx = "^0.28.1"
ruff = "^0.8.2"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
markers = [
    "disable_autouse: disable fixtures configured with `autouse=True`",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["PL", "I"]
ignore = ["PLR2004", "PLR0913"]

[tool.coverage]
# https://github.com/nedbat/coveragepy
    [tool.coverage.run]
    omit = [
        '*/.local/*',
        '/usr/*',
        '*/.venv/*',
        '*/.tox/*',
        '*/virtualenvs/*',
    ]

    [tool.coverage.report]

    exclude_lines = [
        "# noqa",
        "raise NotImplementedError",
        "pragma: no cover",
        "def __repr__",
        "if .debug:",
        "raise NotImplementedError",
        "if __name__ == .__main__.:",
        "logger.",
        "from",
        "import"
    ]

[tool.mypy]
# Sync Python version with Dockerfile
python_version = "3.12"
# Look for errors in this file
warn_unused_configs = true
plugins = ["pydantic.mypy"]

# TODO: Get stricter for these options
# None is compatible with all types (pre-mypy 0.6 behaviour)
strict_optional = false
# Suppress all missing import errors for all libraries
ignore_missing_imports = true

# Warn when returning Any from function with non-Any return
warn_return_any = true

[[tool.mypy.overrides]]
module = "ctms.auth"
strict_optional = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "ctms.crud"
strict_optional = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "ctms.metrics"
strict_optional = true
ignore_missing_imports = false
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "ctms.log"
strict_optional = true
ignore_missing_imports = false
disallow_untyped_defs = true
check_untyped_defs = true
