[build-system]
requires = ["poetry>=2.0"]
build-backend = "poetry.masonry.api"

[project]
name = "ctms"
version = "1.0"
description = "Contact Management System API"
readme = "README.md"
authors = [
  { name = "CTMS Reviewers" },
]
requires-python = ">=3.12,<4"
package-mode = false
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "alembic>=1.14",
  "argon2-cffi>=23.1",
  "colorama>=0.4.6",
  "dockerflow[fastapi]>=2024.4.2",
  "fastapi>=0.115.6",
  "google-auth>=2.37",
  "lxml>=5.3",
  "prometheus-client==0.21.1",
  "psycopg2>=2.9.10",
  "pydantic-settings>=2.7",
  "pydantic[email]>=2.10.4",
  "pyjwt>=2.10.1",
  "python-dateutil>=2.9",
  "python-multipart>=0.0.20",
  "requests>=2.32.3",
  "sentry-sdk[fastapi]>=2.19.2",
  "sqlalchemy>=2.0.36",
  "starlette>=0.41.3",
  "uvicorn[standard]>=0.34",
]

# TODO: Move to PEP 735 dependency-groups when supported:
# https://github.com/python-poetry/poetry/issues/9751
[tool.poetry.group.dev.dependencies]
backoff = ">=2.2.1"
bandit = ">=1.8.0"
coverage = {extras = ["toml"], version = ">=7.6.10"}
detect-secrets = ">=1.5.0"
factory-boy = ">=3.3.1"
httpx = ">=0.28.1"
mypy = "^1.14.1"
pre-commit = ">=4.0.1"
pytest = ">=8.3.4"
pytest-factoryboy = ">=2.7.0"
ruff = "^0.8.6"
SQLAlchemy-Utils = ">=0.41.2"
types-python-dateutil = ">=2.9.0"
types-requests = ">=2.32.0"

[tool.pytest.ini_options]
testpaths = [ "tests/unit" ]
markers = [
  "disable_autouse: disable fixtures configured with `autouse=True`",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [ "PL", "I"] 
ignore = [ "PLR2004", "PLR0913" ]

[tool.coverage.run]
omit = [
  '*/.local/*',
  '/usr/*',
  '*/.venv/*',
  '*/.tox/*',
  '*/virtualenvs/*',
]

[tool.coverage.report]
exclude_lines = [
  "# noqa",
  "raise NotImplementedError",
  "pragma: no cover",
  "def __repr__",
  "if .debug:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "logger.",
  "from",
  "import",
]

[tool.mypy]
# Sync Python version with Dockerfile
python_version = "3.12"
# Look for errors in this file
warn_unused_configs = true
plugins = [ "pydantic.mypy" ]

# TODO: Get stricter for these options
# None is compatible with all types (pre-mypy 0.6 behaviour)
strict_optional = false
# Suppress all missing import errors for all libraries
ignore_missing_imports = true

# Warn when returning Any from function with non-Any return
warn_return_any = true

[[tool.mypy.overrides]]
module = "ctms.auth"
strict_optional = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "ctms.crud"
strict_optional = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "ctms.metrics"
strict_optional = true
ignore_missing_imports = false
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "ctms.log"
strict_optional = true
ignore_missing_imports = false
disallow_untyped_defs = true
check_untyped_defs = true
